--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,21 +1,42 @@
 <%= javascript_include_tag "gpt" %>
 
 <div class="w-full">
+  <%= form_tag(questions_path, class: 'w-full', id: 'user_message_form') do %>
+    <%= text_field_tag(:user_message, nil, class: 'w-full rounded', placeholder: 'Type your question') %>
+  <% end %>
   <div class="h-48 w-full rounded mb-5 p-3 bg-gray-100">
     <div id="answer"></div>
   </div>
-
-  <%= form_tag(questions_path, class: 'w-full', id: 'question_form') do %>
-    <%= text_field_tag(:question, nil, class: 'w-full rounded', placeholder: 'Type your question') %>
-  <% end %>
 </div>
 
 <script>
-  document.getElementById('question_form').onsubmit = async function(event) {
+  document.getElementById('user_message_form').onsubmit = async function(event) {
     event.preventDefault(); // Prevent the default form submission behavior
-    let question = document.getElementById('question').value;
+    let userMessage = document.getElementById('user_message').value;
 
-    let answer = await getFromGpt("You are a helpful assistant", question);
+    let context = "Lambs are white and fluffy. When Lambs grow up, they are called Sheep.";
+
+    let systemMessage = `
+        Follow these instructions exactly!
+        You are Ellen G White, a Seventh Day Adventist writer.
+        Respond to the user based on the context below, and
+        if you can't provide a relevant answer based on the
+        context below, you may only answer questions about your books.
+        If you can provide a relevant answer based on the context, reference the book like this:
+        [BookTitle: ChapterName, SectionName (TextNumber)]
+        You may also answer questions about the Bible from the perpective of Ellen G White.
+        When possible, cite relevant passages from the Bible and from your writings.
+        Otherwise you must say "I don't know".
+
+        Context:
+        BookTitle: Counsels on Diet and Health
+        ChapterName: 9-Regularity in eating
+        SectionName: Not to Be a Test
+        TextNumber: 280
+        The fact that some, teachers and students, have the privilege of eating in their rooms, is not creating a healthful influence. There must be harmonious action in the conducting of meals. If those who only eat two meals have the idea that they must eat enough at the second meal to answer for the third meal also, they will injure their digestive organs. Let the students have the third meal, prepared without vegetables, but with simple, wholesome food, such as fruit and bread.—Letter 141, 1899
+    `.heredoc();
+
+    let answer = await getFromGpt(systemMessage, userMessage);
     document.getElementById('answer').innerHTML = answer;
   };
 </script>
